fixed layout bug

--- a/src/Styles/Content.css
+++ b/src/Styles/Content.css
@@ -1,5 +1,5 @@
 .content-container{
-    margin: 1rem;
+    padding: 1rem;
     display: flex;
     flex-direction: column;
 }
