--- a/src/Styles/SelectArticle.css
+++ b/src/Styles/SelectArticle.css
@@ -14,7 +14,7 @@
 }
 
 .select-img{
-    object-fit: contain;
+    object-fit: fill;
 }
 
 
